ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: personal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: wordpress.pawan.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-service
            port:
              number: 80
      - path: /node
        pathType: Prefix
        backend:
          service:
            name: nodeapp-service
            port:
              number: 80

  - host: aspnewer.pawan.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: aspnewer-service
            port:
              number: 80
